// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`notifications-flyout/presenters/DismissButtonPresenter renders with all props 1`] = `
.emotion-2 {
  display: none;
  position: absolute;
  top: 0;
  right: 0;
}

.emotion-1 {
  background-color: transparent;
  border-color: transparent;
  border-style: solid;
  border-width: 1px;
  display: inline-block;
  position: relative;
  cursor: pointer;
  box-sizing: border-box;
  border-radius: 2px;
  padding: 0;
  height: calc(20px + (8px * 2));
  line-height: calc(20px + (8px * 2));
  width: calc(20px + (8px * 2));
  outline: 0;
  -webkit-transition-property: box-shadow,background-color;
  transition-property: box-shadow,background-color;
  -webkit-transition-duration: 0.3s,0.3s;
  transition-duration: 0.3s,0.3s;
  -webkit-transition-timing-function: cubic-bezier(0.4,0,0.2,1),cubic-bezier(0.4,0,0.2,1);
  transition-timing-function: cubic-bezier(0.4,0,0.2,1),cubic-bezier(0.4,0,0.2,1);
}

.emotion-1 svg * {
  fill: #808080;
  -webkit-transition-duration: 0.3s;
  transition-duration: 0.3s;
  -webkit-transition-property: fill;
  transition-property: fill;
}

.emotion-0 {
  fill: #808080;
  position: absolute;
  left: 0;
  right: 0;
  margin: 0 auto;
  top: 50%;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  pointer-events: none;
}

.emotion-0 > * {
  fill: #808080;
}

<div
  className="emotion-2"
>
  <button
    className="emotion-1"
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    tabIndex="0"
    title="HELLO"
  >
    <svg
      className="emotion-0"
      height="16px"
      width="16px"
    >
      <path
        d="M13.4 3.4l-.8-.8L8 7.3 3.4 2.6l-.8.8L7.3 8l-4.7 4.6.8.8L8 8.7l4.6 4.7.8-.8L8.7 8l4.7-4.6z"
      />
    </svg>
  </button>
</div>
`;

exports[`notifications-flyout/presenters/DismissButtonPresenter renders without props 1`] = `
.emotion-2 {
  display: none;
  position: absolute;
  top: 0;
  right: 0;
}

.emotion-1 {
  background-color: transparent;
  border-color: transparent;
  border-style: solid;
  border-width: 1px;
  display: inline-block;
  position: relative;
  cursor: pointer;
  box-sizing: border-box;
  border-radius: 2px;
  padding: 0;
  height: calc(20px + (8px * 2));
  line-height: calc(20px + (8px * 2));
  width: calc(20px + (8px * 2));
  outline: 0;
  -webkit-transition-property: box-shadow,background-color;
  transition-property: box-shadow,background-color;
  -webkit-transition-duration: 0.3s,0.3s;
  transition-duration: 0.3s,0.3s;
  -webkit-transition-timing-function: cubic-bezier(0.4,0,0.2,1),cubic-bezier(0.4,0,0.2,1);
  transition-timing-function: cubic-bezier(0.4,0,0.2,1),cubic-bezier(0.4,0,0.2,1);
}

.emotion-1 svg * {
  fill: #808080;
  -webkit-transition-duration: 0.3s;
  transition-duration: 0.3s;
  -webkit-transition-property: fill;
  transition-property: fill;
}

.emotion-0 {
  fill: #808080;
  position: absolute;
  left: 0;
  right: 0;
  margin: 0 auto;
  top: 50%;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  pointer-events: none;
}

.emotion-0 > * {
  fill: #808080;
}

<div
  className="emotion-2"
>
  <button
    className="emotion-1"
    onBlur={[Function]}
    onFocus={[Function]}
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    tabIndex="0"
    title="Dismiss featured notification"
  >
    <svg
      className="emotion-0"
      height="16px"
      width="16px"
    >
      <path
        d="M13.4 3.4l-.8-.8L8 7.3 3.4 2.6l-.8.8L7.3 8l-4.7 4.6.8.8L8 8.7l4.6 4.7.8-.8L8.7 8l4.7-4.6z"
      />
    </svg>
  </button>
</div>
`;
